--- a/package.json
+++ b/package.json
@@ -28,6 +28,7 @@
     "jsonwebtoken": "^9.0.2",
     "multer": "^2.0.1",
     "mysql2": "^3.14.1",
+    "papaparse": "^5.5.3",
     "streamifier": "^0.1.1"
   },
   "devDependencies": {
